--- a/song_comparison_using_MIDI_data.ipynb
+++ b/song_comparison_using_MIDI_data.ipynb
@@ -31,19 +31,23 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 102
         },
-        "outputId": "4a8145aa-fb9d-4926-d5a6-59c28f7b0e20"
+        "outputId": "79157c18-ed5a-421f-8482-523e37e51be3"
       },
       "source": [
         "!pip install mido"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: mido in /usr/local/lib/python3.6/dist-packages (1.2.9)\n"
+            "Collecting mido\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/20/0a/81beb587b1ae832ea6a1901dc7c6faa380e8dd154e0a862f0a9f3d2afab9/mido-1.2.9-py2.py3-none-any.whl (52kB)\n",
+            "\r\u001b[K     |██████▎                         | 10kB 16.2MB/s eta 0:00:01\r\u001b[K     |████████████▌                   | 20kB 1.5MB/s eta 0:00:01\r\u001b[K     |██████████████████▊             | 30kB 2.0MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 40kB 2.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 51kB 1.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 61kB 1.8MB/s \n",
+            "\u001b[?25hInstalling collected packages: mido\n",
+            "Successfully installed mido-1.2.9\n"
           ],
           "name": "stdout"
         }
@@ -58,23 +62,23 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "1f16ba7e-4641-4b7e-937d-56669251464d"
+        "outputId": "9e47f9b3-e10a-4af1-b12b-086463a89d3f"
       },
       "source": [
         "!pip install aubio"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting aubio\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/cd/80/302d89240603e5347c7f8026c8b02c59f8dfaec66c91a743d82de7c86006/aubio-0.4.9.tar.gz (479kB)\n",
-            "\r\u001b[K     |▊                               | 10kB 15.8MB/s eta 0:00:01\r\u001b[K     |█▍                              | 20kB 2.0MB/s eta 0:00:01\r\u001b[K     |██                              | 30kB 2.7MB/s eta 0:00:01\r\u001b[K     |██▊                             | 40kB 2.9MB/s eta 0:00:01\r\u001b[K     |███▍                            | 51kB 2.4MB/s eta 0:00:01\r\u001b[K     |████                            | 61kB 2.7MB/s eta 0:00:01\r\u001b[K     |████▉                           | 71kB 2.9MB/s eta 0:00:01\r\u001b[K     |█████▌                          | 81kB 3.2MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 92kB 3.4MB/s eta 0:00:01\r\u001b[K     |██████▉                         | 102kB 3.3MB/s eta 0:00:01\r\u001b[K     |███████▌                        | 112kB 3.3MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 122kB 3.3MB/s eta 0:00:01\r\u001b[K     |█████████                       | 133kB 3.3MB/s eta 0:00:01\r\u001b[K     |█████████▋                      | 143kB 3.3MB/s eta 0:00:01\r\u001b[K     |██████████▎                     | 153kB 3.3MB/s eta 0:00:01\r\u001b[K     |███████████                     | 163kB 3.3MB/s eta 0:00:01\r\u001b[K     |███████████▋                    | 174kB 3.3MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 184kB 3.3MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 194kB 3.3MB/s eta 0:00:01\r\u001b[K     |█████████████▊                  | 204kB 3.3MB/s eta 0:00:01\r\u001b[K     |██████████████▍                 | 215kB 3.3MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 225kB 3.3MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 235kB 3.3MB/s eta 0:00:01\r\u001b[K     |████████████████▍               | 245kB 3.3MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 256kB 3.3MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 266kB 3.3MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 276kB 3.3MB/s eta 0:00:01\r\u001b[K     |███████████████████▏            | 286kB 3.3MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 296kB 3.3MB/s eta 0:00:01\r\u001b[K     |████████████████████▌           | 307kB 3.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████▏          | 317kB 3.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 327kB 3.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████▋         | 337kB 3.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████▎        | 348kB 3.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 358kB 3.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████▋       | 368kB 3.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▎      | 378kB 3.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 389kB 3.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 399kB 3.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▍    | 409kB 3.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 419kB 3.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▊   | 430kB 3.3MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 440kB 3.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 450kB 3.3MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▉ | 460kB 3.3MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 471kB 3.3MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 481kB 3.3MB/s \n",
+            "\r\u001b[K     |▊                               | 10kB 17.9MB/s eta 0:00:01\r\u001b[K     |█▍                              | 20kB 1.7MB/s eta 0:00:01\r\u001b[K     |██                              | 30kB 2.3MB/s eta 0:00:01\r\u001b[K     |██▊                             | 40kB 2.5MB/s eta 0:00:01\r\u001b[K     |███▍                            | 51kB 2.0MB/s eta 0:00:01\r\u001b[K     |████                            | 61kB 2.3MB/s eta 0:00:01\r\u001b[K     |████▉                           | 71kB 2.5MB/s eta 0:00:01\r\u001b[K     |█████▌                          | 81kB 2.8MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 92kB 2.9MB/s eta 0:00:01\r\u001b[K     |██████▉                         | 102kB 2.8MB/s eta 0:00:01\r\u001b[K     |███████▌                        | 112kB 2.8MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 122kB 2.8MB/s eta 0:00:01\r\u001b[K     |█████████                       | 133kB 2.8MB/s eta 0:00:01\r\u001b[K     |█████████▋                      | 143kB 2.8MB/s eta 0:00:01\r\u001b[K     |██████████▎                     | 153kB 2.8MB/s eta 0:00:01\r\u001b[K     |███████████                     | 163kB 2.8MB/s eta 0:00:01\r\u001b[K     |███████████▋                    | 174kB 2.8MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 184kB 2.8MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 194kB 2.8MB/s eta 0:00:01\r\u001b[K     |█████████████▊                  | 204kB 2.8MB/s eta 0:00:01\r\u001b[K     |██████████████▍                 | 215kB 2.8MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 225kB 2.8MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 235kB 2.8MB/s eta 0:00:01\r\u001b[K     |████████████████▍               | 245kB 2.8MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 256kB 2.8MB/s eta 0:00:01\r\u001b[K     |█████████████████▉              | 266kB 2.8MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 276kB 2.8MB/s eta 0:00:01\r\u001b[K     |███████████████████▏            | 286kB 2.8MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 296kB 2.8MB/s eta 0:00:01\r\u001b[K     |████████████████████▌           | 307kB 2.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████▏          | 317kB 2.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 327kB 2.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████▋         | 337kB 2.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████▎        | 348kB 2.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 358kB 2.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████▋       | 368kB 2.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▎      | 378kB 2.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 389kB 2.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 399kB 2.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▍    | 409kB 2.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 419kB 2.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▊   | 430kB 2.8MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 440kB 2.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 450kB 2.8MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▉ | 460kB 2.8MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▌| 471kB 2.8MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 481kB 2.8MB/s \n",
             "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from aubio) (1.18.5)\n",
             "Building wheels for collected packages: aubio\n",
             "  Building wheel for aubio (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for aubio: filename=aubio-0.4.9-cp36-cp36m-linux_x86_64.whl size=386261 sha256=d9709b1d126296d7341a88bafccd439442f964362ba063db3e5940e44cd89316\n",
+            "  Created wheel for aubio: filename=aubio-0.4.9-cp36-cp36m-linux_x86_64.whl size=386254 sha256=b58bfeb5cf9ff54c660811cb221e28619b984f5e36d2935861e716688bb10c33\n",
             "  Stored in directory: /root/.cache/pip/wheels/ac/93/da/33a0041dff56d6c1faf82c83ff487cf669442b7087db20a995\n",
             "Successfully built aubio\n",
             "Installing collected packages: aubio\n",
@@ -93,7 +97,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 122
         },
-        "outputId": "88c2f551-d8c5-48ff-9579-a2df64b760c8"
+        "outputId": "d5509b9e-02cf-4963-d487-5d2bb839981e"
       },
       "source": [
         "from google.colab import drive\n",
@@ -101,7 +105,7 @@
         "import os\n",
         "os.chdir(\"drive/My Drive/\")\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +139,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 462
         },
-        "outputId": "04f554d2-e3c2-415f-f0ed-e4a8631acc84"
+        "outputId": "9fc01246-d507-4ac8-f39f-efd496433a97"
       },
       "source": [
         "'''\n",
@@ -168,21 +172,27 @@
         "files = glob.glob('/content/drive/My Drive/testsamples/*')\n",
         "print(files)\n",
         "totd=[]\n",
-        "file_path = '/content/drive/My Drive/testsamples/vandematramlata.wav'\n",
+        "for e in files:\n",
+        "  file_path = e\n",
+        "  (source_rate, source_sig) = wav.read(file_path)\n",
+        "  duration_seconds = len(source_sig) / float(source_rate)\n",
+        "  totd.append(duration_seconds)\n",
+        "  \n",
+        "#file_path = '/content/drive/My Drive/testsamples/vandematramlata.wav'\n",
         "#file_path = \"'files(0)'\"\n",
-        "(source_rate, source_sig) = wav.read(file_path)\n",
-        "duration_seconds = len(source_sig) / float(source_rate)\n",
-        "totd.append(duration_seconds)\n",
-        "file_path = '/content/drive/My Drive/testsamples/vandematramshreya.wav'\n",
+        "#(source_rate, source_sig) = wav.read(file_path)\n",
+        "#duration_seconds = len(source_sig) / float(source_rate)\n",
+        "#totd.append(duration_seconds)\n",
+        "#file_path = '/content/drive/My Drive/testsamples/vandematramshreya.wav'\n",
         "#file_path = \"'files(0)'\"\n",
-        "(source_rate, source_sig) = wav.read(file_path)\n",
-        "duration_seconds = len(source_sig) / float(source_rate)\n",
-        "totd.append(duration_seconds)\n",
-        "file_path = '/content/drive/My Drive/testsamples/vandematramanuja.wav'\n",
+        "#(source_rate, source_sig) = wav.read(file_path)\n",
+        "#duration_seconds = len(source_sig) / float(source_rate)\n",
+        "#totd.append(duration_seconds)\n",
+        "#file_path = '/content/drive/My Drive/testsamples/vandematramanuja.wav'\n",
         "#file_path = \"'files(0)'\"\n",
-        "(source_rate, source_sig) = wav.read(file_path)\n",
-        "duration_seconds = len(source_sig) / float(source_rate)\n",
-        "totd.append(duration_seconds)\n",
+        "#(source_rate, source_sig) = wav.read(file_path)\n",
+        "#duration_seconds = len(source_sig) / float(source_rate)\n",
+        "#totd.append(duration_seconds)\n",
         "print(len(files))\n",
         "no= len(files)\n",
         "mydata2= [[]]\n",
@@ -243,7 +253,7 @@
         "  mydata2[c].append([t1])\n",
         "  c=c+1"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,12 +297,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 54
         },
-        "outputId": "329cf3ab-5209-421a-b430-fa46eb4901f1"
+        "outputId": "82706428-cd04-444b-d5f0-983210fff44b"
       },
       "source": [
         "print(test1)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,12 +322,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "8d18270f-54f2-412c-973f-f08be5e3c835"
+        "outputId": "a7303754-2df4-419b-e2d3-453ab51ceb3a"
       },
       "source": [
         "print (test1[0])"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -337,7 +347,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "315c5a91-d6c1-489e-d518-b78e0fd26c12"
+        "outputId": "100080d0-69b7-4e35-f423-2828b93dc282"
       },
       "source": [
         "no=0\n",
@@ -391,7 +401,7 @@
         "print(\"intensity\")\n",
         "print(inten0)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +431,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 190
         },
-        "outputId": "65a6d91b-ea43-4e73-82f1-ec4bf78edbc4"
+        "outputId": "a2072696-5d42-4a58-c71d-9ccbaac1959d"
       },
       "source": [
         "no=1\n",
@@ -475,7 +485,7 @@
         "print(\"intensity\")\n",
         "print(inten1)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +513,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
-        "outputId": "c7b5f277-04e7-4290-eea3-d59d1c8b5160"
+        "outputId": "c57e550d-12a6-4ddf-c0d2-912f513a4478"
       },
       "source": [
         "no=2\n",
@@ -557,7 +567,7 @@
         "print(\"intensity\")\n",
         "print(inten2)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,12 +595,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "bbba8c1d-afcd-4a64-c08b-f1af69494513"
+        "outputId": "82ea9a46-4e35-4c8d-dbd5-fba10997cb00"
       },
       "source": [
         "print (test1[2])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +620,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 527
         },
-        "outputId": "b1f64cab-e4b5-4a18-fe75-51ade87ac880"
+        "outputId": "575012ba-990f-47d2-d0c6-bed06f80e469"
       },
       "source": [
         "import numpy as np\n",
@@ -695,7 +705,7 @@
         "print(\"total distance\")\n",
         "print(d)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
